--- a/Laboratorio.html
+++ b/Laboratorio.html
@@ -129,7 +129,7 @@ i {
     <p class="imagen">
         <p class="contenedor">
 <div align="center">
-	<img src="C:\Users\astri_zvh2zyj\Downloads\Hospital\logobendaña.jpg" width="500" height="150">
+	<img src="logobendaña.jpg" width="500" height="150">
 </div>
 <div id="container">
     <nav>
